--- a/HTML/Dashboard.html
+++ b/HTML/Dashboard.html
@@ -90,7 +90,7 @@
                 <!-- Registered Events -->
                 <div class="card p-6">
                     <div class="flex items-center gap-2 mb-4">
-                        <i data-lucide="calendar" class="w-5 h-5 text-secondary"></i>
+                        <i data-lucide="calendar-check" class="text-text-primary w-5 h-5 text-secondary"></i>
                         <h3 class="text-text-primary poppins">Registered Events</h3>
                     </div>
                     <div class="space-y-3">
