--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="card p-6 space-y-4">
                         <div class="w-12 h-12 rounded-lg bg-background flex items-center justify-center text-secondary">
-                            <i data-lucide="calendar" class="w-6 h-6"></i>
+                            <i data-lucide="calendar" class="text-text-primary w-6 h-6"></i>
                         </div>
                         <h3 class="text-text-primary poppins">Events</h3>
                         <p class="text-text-secondary text-sm">Discover and register for upcoming campus events and workshops</p>
