--- a/FrontEnd/Dashboard.html
+++ b/FrontEnd/Dashboard.html
@@ -16,8 +16,8 @@
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
     
-    <link rel="stylesheet" href="../CSS/Common.css">
-    <link rel="stylesheet" href="../CSS/Dashboard.css">
+    <link rel="stylesheet" href="/FrontEnd/dist/CSS/Common.css">
+    <link rel="stylesheet" href="/FrontEnd/dist/CSS/Dashboard.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -166,7 +166,7 @@
         </div>
     </footer>
 
-    <script src="../JS/Common.js"></script>
-    <script src="../JS/Dasboard.js"></script>
+    <script src="/FrontEnd/dist/JS/Common.js"></script>
+    <script src="/FrontEnd/dist/JS/Dasboard.js"></script>
 </body>
 </html>
