--- a/FrontEnd/Home.html
+++ b/FrontEnd/Home.html
@@ -16,8 +16,8 @@
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
     
-    <link rel="stylesheet" href="../CSS/Common.css">
-    <link rel="stylesheet" href="../CSS/Home.css">
+    <link rel="stylesheet" href="/FrontEnd/dist/CSS/Common.css">
+    <link rel="stylesheet" href="/FrontEnd/dist/CSS/Home.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -30,23 +30,23 @@
                 
                 <div class="flex space-x-1 md:space-x-4">
                     <a href="Home.html" class="nav-btn active">
-                        <i data-lucide="home" class="w-4 h-4"></i>
+                        <img src="/FrontEnd/dist/Icons/Home.svg" class="w-5 h-5">
                         <span class="hidden sm:inline">Home</span>
                     </a>
                     <a href="Dashboard.html" class="nav-btn">
-                        <i data-lucide="layout-dashboard" class="w-4 h-4"></i>
+                        <img src="/FrontEnd/dist/Icons/DashBoard.svg" class="w-5 h-5">
                         <span class="hidden sm:inline">Dashboard</span>
                     </a>
                     <a href="Announcement.html" class="nav-btn">
-                        <i data-lucide="megaphone" class="w-4 h-4"></i>
+                        <img src="/FrontEnd/dist/Icons/Megaphone.svg" class="w-5 h-5">
                         <span class="hidden sm:inline">Announcements</span>
                     </a>
                     <a href="Events.html" class="nav-btn">
-                        <i data-lucide="calendar" class="w-4 h-4"></i>
+                        <img src="/FrontEnd/dist/Icons/CalendarWhite.svg" class="w-5 h-5">
                         <span class="hidden sm:inline">Events</span>
                     </a>
                     <a href="Clubs.html" class="nav-btn">
-                        <i data-lucide="users" class="w-4 h-4"></i>
+                        <img src="/FrontEnd/dist/Icons/PersonWhite.svg" class="w-5 h-5">
                         <span class="hidden sm:inline">Clubs</span>
                     </a>
                 </div>
@@ -101,35 +101,35 @@
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="card p-6 space-y-4">
                         <div class="w-12 h-12 rounded-lg bg-background flex items-center justify-center text-nav-primary">
-                            <i data-lucide="bell" class="w-6 h-6"></i>
+                            <img src="/FrontEnd/dist/Icons/Bell.svg">
                         </div>
                         <h3 class="text-text-primary poppins">Announcements</h3>
                         <p class="text-text-secondary text-sm">Stay updated with the latest campus news and important notices</p>
                         <a href="Announcement.html" class="btn btn-primary btn-sm w-full">
                             <span>Open</span>
-                            <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
+                            <img src="/FrontEnd/dist/Icons/ArrowRight.svg" class="w-6 h-6 ml-2">
                         </a>
                     </div>
                     <div class="card p-6 space-y-4">
                         <div class="w-12 h-12 rounded-lg bg-background flex items-center justify-center text-secondary">
-                            <i data-lucide="calendar" class="text-text-primary w-6 h-6"></i>
+                            <img src="/FrontEnd/dist/Icons/CalendarBlack.svg" class="w-6 h-6">
                         </div>
                         <h3 class="text-text-primary poppins">Events</h3>
                         <p class="text-text-secondary text-sm">Discover and register for upcoming campus events and workshops</p>
                         <a href="Events.html" class="btn btn-primary btn-sm w-full">
                             <span>Open</span>
-                            <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
+                            <img src="/FrontEnd/dist/Icons/ArrowRight.svg" class="w-6 h-6 ml-2">
                         </a>
                     </div>
                     <div class="card p-6 space-y-4">
                         <div class="w-12 h-12 rounded-lg bg-background flex items-center justify-center text-nav-primary">
-                            <i data-lucide="users" class="w-6 h-6"></i>
+                            <img src="/FrontEnd/dist/Icons/PersonBlack.svg" class="w-6 h-6">
                         </div>
                         <h3 class="text-text-primary poppins">Clubs</h3>
                         <p class="text-text-secondary text-sm">Join student clubs and connect with peers who share your interests</p>
                         <a href="Clubs.html" class="btn btn-primary btn-sm w-full">
                             <span>Open</span>
-                            <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
+                            <img src="/FrontEnd/dist/Icons/ArrowRight.svg" class="w-6 h-6 ml-2">
                         </a>
                     </div>
                 </div>
@@ -144,6 +144,6 @@
         </div>
     </footer>
 
-    <script src="../JS/Common.js"></script>
+    <script src="/FrontEnd/dist/CSS/Common.css"></script>
 </body>
 </html>
