--- a/FrontEnd/Dashboard.html
+++ b/FrontEnd/Dashboard.html
@@ -30,23 +30,23 @@
                 
                 <div class="flex space-x-1 md:space-x-4">
                     <a href="Home.html" class="nav-btn">
-                        <i data-lucide="home" class="w-4 h-4"></i>
+                        <img src="./dist/Icons/Home.svg" alt="" class="w-5 h-5">
                         <span class="hidden sm:inline">Home</span>
                     </a>
                     <a href="Dashboard.html" class="nav-btn active">
-                        <i data-lucide="layout-dashboard" class="w-4 h-4"></i>
+                        <img src="./dist/Icons/DashBoard.svg" alt="" class="w-5 h-5">
                         <span class="hidden sm:inline">Dashboard</span>
                     </a>
                     <a href="Announcement.html" class="nav-btn">
-                        <i data-lucide="megaphone" class="w-4 h-4"></i>
+                        <img src="./dist/Icons/Megaphone.svg" alt="" class="w-5 h-5">
                         <span class="hidden sm:inline">Announcements</span>
                     </a>
                     <a href="Events.html" class="nav-btn">
-                        <i data-lucide="calendar" class="w-4 h-4"></i>
+                        <img src="./dist/Icons/CalendarWhite.svg" alt="" class="w-5 h-5">
                         <span class="hidden sm:inline">Events</span>
                     </a>
                     <a href="Clubs.html" class="nav-btn">
-                        <i data-lucide="users" class="w-4 h-4"></i>
+                        <img src="./dist/Icons/PersonWhite.svg" alt="" class="w-5 h-5">
                         <span class="hidden sm:inline">Clubs</span>
                     </a>
                 </div>
@@ -68,21 +68,21 @@
                 <!-- Saved Announcements -->
                 <div class="card p-6">
                     <div class="flex items-center gap-2 mb-4">
-                        <i data-lucide="bookmark" class="w-5 h-5 text-nav-primary"></i>
+                        <img src="./dist/Icons/BookMark.svg" alt="" class="w-6 h-6 text-nav-primary">
                         <h3 class="text-text-primary poppins">Saved Announcements</h3>
                     </div>
                     <div class="space-y-3">
                         <div class="p-3 bg-background rounded-lg hover:bg-opacity-80 transition-colors cursor-pointer">
                             <p class="text-text-primary font-medium text-sm">Campus Closure - Holiday</p>
-                            <p class="text-text-secondary text-xs mt-1">Dec 25, 2024</p>
+                            <p class="text-text-secondary text-xs mt-1">Dec 25, 2025</p>
                         </div>
                         <div class="p-3 bg-background rounded-lg hover:bg-opacity-80 transition-colors cursor-pointer">
                             <p class="text-text-primary font-medium text-sm">Final Exam Schedule Released</p>
-                            <p class="text-text-secondary text-xs mt-1">Dec 10, 2024</p>
+                            <p class="text-text-secondary text-xs mt-1">Dec 10, 2025</p>
                         </div>
                         <div class="p-3 bg-background rounded-lg hover:bg-opacity-80 transition-colors cursor-pointer">
                             <p class="text-text-primary font-medium text-sm">Library Extended Hours</p>
-                            <p class="text-text-secondary text-xs mt-1">Dec 5, 2024</p>
+                            <p class="text-text-secondary text-xs mt-1">Dec 5, 2025</p>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                 <!-- Registered Events -->
                 <div class="card p-6">
                     <div class="flex items-center gap-2 mb-4">
-                        <i data-lucide="calendar-check" class="text-text-primary w-5 h-5 text-secondary"></i>
+                        <img src="./dist/Icons/CalendarCheck.svg" alt="" class="text-text-primary w-6 h-6 text-secondary">
                         <h3 class="text-text-primary poppins">Registered Events</h3>
                     </div>
                     <div class="space-y-3">
@@ -112,7 +112,7 @@
                 <!-- Joined Clubs -->
                 <div class="card p-6">
                     <div class="flex items-center gap-2 mb-4">
-                        <i data-lucide="users" class="w-5 h-5 text-nav-primary"></i>
+                        <img src="./dist/Icons/Users.svg" alt="" class="w-6 h-6 text-nav-primary">
                         <h3 class="text-text-primary poppins">Joined Clubs</h3>
                     </div>
                     <div class="space-y-3">
@@ -138,7 +138,7 @@
                 <div class="card p-6">
                     <h4 class="text-text-primary mb-4 poppins">Theme Settings</h4>
                     <button onclick="toggleTheme()" id="theme-toggle" class="flex items-center gap-3 w-full p-3 bg-background rounded-lg hover:bg-opacity-80 transition-colors">
-                        <i data-lucide="moon" class="w-5 h-5 text-nav-primary"></i>
+                        <img src="./dist/Icons/Moon.svg" alt="" class="w-6 h-6 text-nav-primary">
                         <span class="text-text-primary">Switch to Dark Mode</span>
                     </button>
                 </div>
