--- a/FrontEnd/Home.html
+++ b/FrontEnd/Home.html
@@ -145,5 +145,6 @@
     </footer>
 
     <script src="/FrontEnd/dist/CSS/Common.css"></script>
+    <script src="/FrontEnd/dist/JS/Common.js"></script>
 </body>
 </html>
