--- a/FrontEnd/Announcement.html
+++ b/FrontEnd/Announcement.html
@@ -30,23 +30,23 @@
                 
                 <div class="flex space-x-1 md:space-x-4">
                     <a href="home.html" class="nav-btn">
-                        <i data-lucide="home" class="w-4 h-4"></i>
-                        <span class="hidden sm:inline">Home</span>
+                        <img src="./dist/Icons/Home.svg" alt="" class="w-5 h-5">
+                        <span class="hidden sm:inline">Home</span>  
                     </a>
                     <a href="dashboard.html" class="nav-btn">
-                        <i data-lucide="layout-dashboard" class="w-4 h-4"></i>
+                        <img src="./dist/Icons/DashBoard.svg" alt="" class="w-5 h-5">
                         <span class="hidden sm:inline">Dashboard</span>
                     </a>
                     <a href="announcements.html" class="nav-btn active">
-                        <i data-lucide="megaphone" class="w-4 h-4"></i>
+                        <img src="./dist/Icons/Megaphone.svg" alt="" class="w-5 h-5">
                         <span class="hidden sm:inline">Announcements</span>
                     </a>
                     <a href="events.html" class="nav-btn">
-                        <i data-lucide="calendar" class="w-4 h-4"></i>
+                        <img src="./dist/Icons/CalendarWhite.svg" alt="" class="w-5 h-5">
                         <span class="hidden sm:inline">Events</span>
                     </a>
                     <a href="clubs.html" class="nav-btn">
-                        <i data-lucide="users" class="w-4 h-4"></i>
+                        <img src="./dist/Icons/PersonWhite.svg" alt="" class="w-5 h-5">
                         <span class="hidden sm:inline">Clubs</span>
                     </a>
                 </div>
@@ -63,7 +63,7 @@
                 
                 <!-- Search Bar -->
                 <div class="relative mb-4">
-                    <i data-lucide="search" class="absolute left-3 top-1/2 transform -translate-y-1/2 w-5 h-5 text-text-secondary"></i>
+                    <img src="./dist/Icons/Search.svg" alt="" class="absolute left-3 top-1/2 transform -translate-y-1/2 w-6 h-6 text-text-secondary">
                     <input
                         type="text"
                         id="announcement-search"
