--- a/FrontEnd/Home.html
+++ b/FrontEnd/Home.html
@@ -22,7 +22,7 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="max-w-full mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
                     <span class="text-white font-semibold poppins">SCMS</span>
@@ -56,12 +56,13 @@
 
     <!-- Main Content -->
     <main>
-        <div class="space-y-12 py-8">
+        <div class="space-y-12 py-12">
             <!-- Hero Section -->
-            <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="grid md:grid-cols-2 gap-8 items-center">
+            <section class="max-w-full px-4 sm:px-6 lg:px-8">
+                <div class="grid md:grid-cols-2 gap-8 items-start">
+
                     <!-- Left side -->
-                    <div class="space-y-6">
+                    <div class="space-y-6 ">
                         <h1 class="text-text-primary poppins">Student Campus Management System (SCMS)</h1>
                         <p class="text-text-secondary">
                             Your one-stop platform for staying connected with campus life. Access announcements, 
@@ -79,15 +80,15 @@
 
                     <!-- Right side - Mini feature cards -->
                     <div class="space-y-3">
-                        <div class="card bg-secondary p-4">
+                        <div class="card bg-secondary p-4 min-h-auto ">
                             <h4 class="text-text-primary mb-1 poppins">Latest Announcement</h4>
                             <p class="text-text-secondary/90 text-sm">Campus closed on Dec 25th for holidays</p>
                         </div>
-                        <div class="card bg-nav-primary text-text-primary p-4">
+                        <div class="card bg-nav-primary text-text-primary p-4 min-h-auto">
                             <h4 class="text-text-primary mb-1 poppins">Upcoming Event</h4>
                             <p class="text-text-secondary/90 text-sm">Tech Workshop - Dec 15th, 2:00 PM</p>
                         </div>
-                        <div class="card bg-secondary text-text-primary p-4">
+                        <div class="card bg-secondary text-text-primary p-4 min-h-auto">
                             <h4 class="text-text-primary mb-1 poppins">Popular Club</h4>
                             <p class="text-text-secondary/90 text-sm">Coding Club - 150+ members</p>
                         </div>
@@ -96,7 +97,7 @@
             </section>
 
             <!-- Quick Access Cards -->
-            <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <section class="w-full px-4 sm:px-6 lg:px-68">
                 <h2 class="text-text-primary mb-6 text-center poppins">Quick Access</h2>
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="card p-6 space-y-4">
@@ -144,7 +145,6 @@
         </div>
     </footer>
 
-    <script src="/FrontEnd/dist/CSS/Common.css"></script>
     <script src="/FrontEnd/dist/JS/Common.js"></script>
 </body>
 </html>
